modified some files

--- a/posts/ウェブサイト開設.md
+++ b/posts/ウェブサイト開設.md
@@ -1,6 +1,6 @@
 ---
 title: GatsbyJSでPC研ウェブサイトを作りました
-slug: /open-website.html
+slug: /create-website.html
 date: "2018-05-30"
 tags: ["ウェブサイト", "オープンソース"]
 category: projects
