modified many files

--- a/posts/ウェブサイト開設.md
+++ b/posts/ウェブサイト開設.md
@@ -1,6 +1,6 @@
 ---
 title: GatsbyJSでPC研ウェブサイトを作りました
-slug: /create-website.html
+slug: create-website
 date: "2018-05-30"
 tags: ["ウェブサイト", "オープンソース"]
 category: projects
