Update Posts “ウェブサイト開設”

--- a/posts/ウェブサイト開設.md
+++ b/posts/ウェブサイト開設.md
@@ -1,9 +1,11 @@
 ---
-title: GatsbyJSでPC研ウェブサイトを作りました
 slug: create-website
-date: "2018-05-30"
-tags: ["ウェブサイト", "オープンソース"]
+date: '2018-05-30'
+title: GatsbyJSでPC研ウェブサイトを作りました
 category: projects
+tags:
+  - ウェブサイト
+  - オープンソース
 author: 平松
 ---
 
@@ -11,7 +13,7 @@ author: 平松
 
 　ＰＣ研のサイトのスペックとしては丁度相応しいだろうと思い、作ってみたのですが、想像以上に何でもできたので驚きました。
 
-　WordPressと比較するとDo it yourselfな感は否めないですが、製作者の方が大量のプラグインを用意してくれているので、動的にページを生成することを除けば何でも速攻で実装できると思います。
+　WordPressと比較するとDo it yourselfな感は否めないですが、製作者の方が大量のプラグインを用意してくれているので、動的にページを生成することを除けば何でも速攻で実装できると思います。あと当然のように読み込みが光の速さです。
 
 　ある程度JavaScript弄れる人ならWordPressよりこっちの方が性に合うかもしれません。
 
