--- a/posts/ＰＣ研ウェブサイトを公開しました.md
+++ b/posts/ＰＣ研ウェブサイトを公開しました.md
@@ -2,7 +2,9 @@
 title: ＰＣ研ウェブサイトを公開しました。
 slug: open-website
 date: "2018-05-30"
-tags: ["ウェブサイト"]
+tags:
+  - ウェブサイト
+  - オープンソース
 category: news
 author: 平松
 ---
