Update Posts “ウェブサイト運営に最低限必要なことまとめ”

--- a/posts/ウェブサイト運営に最低限必要なことまとめ.md
+++ b/posts/ウェブサイト運営に最低限必要なことまとめ.md
@@ -34,7 +34,7 @@ author: 平松
 **サーバーサイド**...クライアントに対してHTML,CSS,Javascriptを送るもの（いかなる手段を使ってもよい）。
 
 
-**Node.js**...当サイトがサーバーサイドで使っている言語。クライアントサイドと同じJavascriptがベースになっているが、同じであることに重要な意味はない。
+**Node.js**...当サイトがサーバーサイドで使っている言語。クライアントサイドと同じJavascript（別名ES6）がベースになっているが、同じであることに重要な意味はない。
 
 
 **React**...Node.js上で動くデザインツール。HTML,CSS,Javascriptをリアルタイム出力できる。
