Update Posts “ウェブサイト運営に最低限必要なことまとめ”

--- a/posts/ウェブサイト運営に最低限必要なことまとめ.md
+++ b/posts/ウェブサイト運営に最低限必要なことまとめ.md
@@ -15,75 +15,51 @@ author: 平松
 ---
 この記事では、当サイトを管理するにあたって最低限必要な知識をお伝えします。
 
-
-
 # 用語
 
 **HTML**...ウェブページの文章構造を定義する言語。
 
-
 **CSS**...ウェブページのデザインを定義する言語。
-
 
 **Javascript**...ウェブページの動作を定義する言語。
 
+**クライアントサイド**...HTML,CSS,Javascriptを表示する場所。ブラウザ。
 
-**クライアントサイド**...ブラウザではHTML,CSS,Javascriptのみが動く。これらをクライアントサイドと呼ぶ。
+**サーバーサイド**...クライアントに対してデータを送る場所。
 
+**Node.js**...当サイトがサーバーサイドで使っている言語。クライアントサイドと同じJavascript（ES6）がベース。
 
-**サーバーサイド**...クライアントに対してHTML,CSS,Javascriptを送るもの（いかなる手段を使ってもよい）。
+**React**...Node.jsでHTMLを書き換えるツール。
 
+**静的ページ**...サーバー上に置いてあるHTML,CSS,Javascript。
 
-**Node.js**...当サイトがサーバーサイドで使っている言語。クライアントサイドと同じJavascript（別名ES6）がベースになっているが、同じであることに重要な意味はない。
-
-
-**React**...Node.js上で動くデザインツール。HTML,CSS,Javascriptをリアルタイム出力できる。
-
-
-**静的ページ**...React等を介することなく、サーバー上に置いてある生のHTML等のファイルが直接ブラウザに送られてきたページ。
-
-
-**動的ページ**...React等を介して、サーバー上で生成された一時的なファイルがブラウザに送られてきたページ。
-
-
+**動的ページ**...サーバーから送られてきたデータによって生成されたページ。
 
 # 静的サイトジェネレータ
 
 ## Reactの欠点
 
-Reactは動的にページを生成するためのツールです。しかし、動的にページを生成すると、
+ReactはJavascriptでHTMLを生成するツールです。しかし、アクセスがある度にデータを送信していると、
 
 1. サーバーに負担がかかる（＝お金がかかる）。
 2. ページの読み込みに少し時間がかかる。
 
-という欠点があります。この2点を改善してくれるのが静的サイトジェネレータです。
-
-
+という欠点があります。この2点を解決するのが静的サイトジェネレータです。
 
 ## GatsbyJS
 
-一般的に、ブログのような記事はデータベースに保存され、必要なときのみ、React等を介して動的にページが生成される仕組みになっています。
+一般的に、ブログのような記事はデータベースに保存します。そして、必要なときのみデータが取り出され、React等のJavascriptで表示する仕組みになっています。
 
+一方、GatsbyJSはブログ記事が投稿されたときにReactを使ってページを生成し、HTMLとしてサーバーに保存します。
 
-一方、GatsbyJSはブログ記事が投稿されたときにReactを使って記事ページを生成し、静的ページとしてサーバーに保存します。
-
-
-すべてのページを予め生成しておけば、動的にページを生成する必要がなくなります。
-
-
-（ただし、記事を投稿する度にサイト全体が再生成されることになるので、記事数が増えるほど反映が遅くなります。また、キーワード検索等のカバーしきれない機能もあります）
-
-
+すべてのHTMLを予め生成しておけば、動的にページを生成する必要がありません。一方、記事を投稿する度にサイト全体が再生成されることになるので、記事数が増えるほど反映が遅くなります。また、キーワード検索等のカバーしきれない機能もあります。
 
 ## Netlify
 
 静的なサイトを無料で生成・ホスティングしてくれる素敵なウェブサービスです。
 
-
-
 # まとめ
 
 この記事では、当サイトを管理するにあたって最低限必要な知識をお伝えしました。
-
 
 次の記事では、GitHub上のソースコードが読みやすくなるように、GatsbyJSのデータ構造について説明します。
