Update Posts “ウェブサイト運営に最低限必要なことまとめ”

--- a/posts/ウェブサイト運営に最低限必要なことまとめ.md
+++ b/posts/ウェブサイト運営に最低限必要なことまとめ.md
@@ -29,17 +29,17 @@ author: 平松
 
 **Node.js**...当サイトがサーバーサイドで使っている言語。クライアントサイドと同じJavascript（ES6）がベース。
 
-**React**...Node.jsでHTMLを書き換えるツール。
+**React**...JavascriptとデータからHTMLを生成するツール。
 
-**静的ページ**...サーバー上に置いてあるHTML,CSS,Javascript。
+**静的ページ**...サーバーに置いてあるHTML。
 
-**動的ページ**...サーバーから送られてきたデータによって生成されたページ。
+**動的ページ**...データとJavascriptによって生成されたHTML。
 
 # 静的サイトジェネレータ
 
 ## Reactの欠点
 
-ReactはJavascriptでHTMLを生成するツールです。しかし、アクセスがある度にデータを送信していると、
+ReactはJavascriptとデータからHTMLを生成するツールです。しかし、アクセスがある度にデータを送信していると、
 
 1. サーバーに負担がかかる（＝お金がかかる）。
 2. ページの読み込みに少し時間がかかる。
