Update Posts “当サイトの編集について”

--- a/posts/当サイトの編集について.md
+++ b/posts/当サイトの編集について.md
@@ -15,8 +15,7 @@ author: 平松
 ---
 このサイトを今年度も引継ぐ場合、編集方法が小難しいと思うので書き残しておきます。一応、[去年の記事](https://www.shigapc.com/tech/webdev-matome)の続きになっています。ウェブサイト構築の導線になれば幸いです。
 
-サンドボックス版の[クローンサイト](https://agitated-mccarthy-f966a1.netlify.com)を作っていますので、実際にそちらで試してみてください。ブログの投稿も
-できます。検索エンジンのクローラーには引っ掛かりません。
+サンドボックス版の[クローンサイト](https://agitated-mccarthy-f966a1.netlify.com)を作っていますので、実際にそちらで試してみてください。検索エンジンのクローラーには引っ掛かりません。
 
 # サイトのデザインを変更する
 HTMLとCSSを理解すれば、容易に編集できます。
